# ros2-message-gen

./: Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
docs/: benchmarking.md  performance-notes.md
examples/: generated_benchmark.rs
src/: cdr.rs  generator.rs  lib.rs  macros.rs  main.rs  parser.rs
