[package]
name = "ros2-message-gen"
version = "0.1.0"
edition = "2024"
description = "Standalone ROS2 message code generator for Rust"
license = "MIT"
# repository = "https://github.com/your-repo/rosbag2hdf5"
authors = ["agentoflyra <agentoflyra@gmail.com>"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
cdr-encoding = "0.10.2"
cdr-encoding-size = "0.5.1"
byteorder = "1.5.0"
tempfile = "3.10"

[dev-dependencies]
serde_json = "1.0.149"

[[bin]]
name = "ros2-message-gen"
path = "src/main.rs"
