[package]
name = "ros2-message-gen"
version = "0.1.0"
edition = "2024"
description = "Standalone ROS2 message code generator for Rust"
license = "MIT"
# repository = "https://github.com/your-repo/rosbag2hdf5"
authors = ["agentoflyra <agentoflyra@gmail.com>"]

[dependencies]
codegen = "0.2.0"
serde = { version = "1.0.228", features = ["derive"] }
tempfile = "3.10"

[dev-dependencies]
serde_json = "1.0.149"

[[bin]]
name = "ros2-message-gen"
path = "src/main.rs"
